kubernetes/notes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes
  namespace: stopphish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - name: notes
          image: stopphish-backend:latest
          imagePullPolicy: IfNotPresent
