kubernetes/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: stopphish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: stopphish-backend:latest
          imagePullPolicy: IfNotPresent
