kubernetes/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: stopphish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:latest
          args:
            - '--http_port'
            - '8222'
            - '--user'
            - nats
            - '--pass'
            - natspassword
          ports:
            - containerPort: 4222
              name: client
            - containerPort: 8222
              name: monitoring
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8222
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8222
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: stopphish
spec:
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: monitoring
      port: 8222
      targetPort: 8222
